# linear_regression_data_analysis

./: pyproject.toml  regression.ipynb
